syntax = "proto3";
package base;
option csharp_namespace = "ILChat";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message BaseResponse {
  int32 status = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 4;
}

message StringBaseResponse {
  BaseResponse meta = 1;
  string data = 2;
}

message BaseRequest {
  google.protobuf.Timestamp timestamp = 1;
}