syntax = "proto3";

package user;
option csharp_namespace = "ILChat";
import "base.proto";

service UserService {
  //Get User by Id
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  //Create new user
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  //Delete User by Id
  rpc DeleteUser (DeleteUserRequest) returns (base.StringBaseResponse);
  //Update User by Id
  rpc UpdateUser (UpdateUserRequest) returns (base.StringBaseResponse);
}
//Get user
message GetUserResponse {
  base.BaseResponse meta = 1;
  GetUserOutput data = 2;
}

message GetUserOutput {
  string id = 1;
  string username = 2;
  string name = 3;
}

message GetUserRequest {
  base.BaseRequest meta = 1;
  string query = 2;
}
//Create user
message CreateUserInput {
  string username = 1;
  string name = 2;
  string password = 3;
}

message CreateUserRequest {
  base.BaseRequest meta = 1;
  CreateUserInput data = 2;
}

message CreateUserResponse {
  base.BaseResponse meta = 1;
  GetUserOutput data = 2;
}
//Delete user
message DeleteUserRequest {
  base.BaseRequest meta = 1;
  string id = 2;
}
//Update user
message UpdateUserInput {
  string id = 1;
  string username = 2;
  string name = 3;
}

message UpdateUserRequest {
  base.BaseRequest meta = 1;
  UpdateUserInput data = 2;
}
